@@ -2141,88 +2141,6 @@ static const canon_modeuse_t canon_BJC_i860_modeuses[] = {
 
 DECLARE_MODEUSES(canon_BJC_i860);
 
-/* ----------------------------------- Canon i865  ----------------------------------- */
-/* TODO: find i865 notes and check media-mode information for photo media */
-static const char* canon_BJC_i865_modeuses_plain[] = {
-  "600x600dpi_high",
-  "600x600dpi",
-  "300x300dpi",
-  "300x300dpi_draft",
-  NULL
-  };
-
-/* highest mode not supported yet */
-static const char* canon_BJC_i865_modeuses_PPpro[] = {
-  "600x600dpi_photohigh",
-  "600x600dpi_photo",
-  "600x600dpi_photodraft",/*untested*/
-  NULL
-};
-
-static const char* canon_BJC_i865_modeuses_PPplus[] = {
-  "600x600dpi_photohigh",
-  "600x600dpi_photo",
-  "600x600dpi_photodraft",/*untested*/
-  NULL
-};
-
-static const char* canon_BJC_i865_modeuses_inkjetHagaki[] = {
-  "600x600dpi_photohigh3",
-  "600x600dpi_photo3",
-  "600x600dpi_std2",
-  NULL
-};
-
-static const char* canon_BJC_i865_modeuses_Hagaki[] = {
-  "600x600dpi_high3",
-  "600x600dpi_std3",
-  "600x600dpi_draft3",
-  NULL
-};
-
-static const char* canon_BJC_i865_modeuses_disc[] = {
-  "600x600dpi_photohigh4",
-  "600x600dpi_photo4",
-  "600x600dpi_photodraft4",
-  NULL
-};
-
-static const char* canon_BJC_i865_modeuses_TShirt[] = {
-  "600x600dpi_tshirt",
-  NULL
-};
-
-static const char* canon_BJC_i865_modeuses_Transparency[] = {
-  "600x600dpi_ohphigh",
-  "600x600dpi_ohp",
-  NULL
-};
-
-static const char* canon_BJC_i865_modeuses_PPother[] = {
-  "600x600dpi_photo",/*untested*/
-  NULL
-  };
-
-static const canon_modeuse_t canon_BJC_i865_modeuses[] = {
-  { "Plain",            canon_BJC_i865_modeuses_plain, 0 },
-  { "GlossyPro",	canon_BJC_i865_modeuses_PPpro, 0 },
-  { "PhotopaperPlus",	canon_BJC_i865_modeuses_PPplus, 0 },
-  { "PhotopaperPlusDouble",canon_BJC_i865_modeuses_PPplus, 0 },
-  { "PhotopaperMatte",	canon_BJC_i865_modeuses_PPplus, 0 },
-  { "GlossyPaper",	canon_BJC_i865_modeuses_PPplus, 0 },
-  { "Coated",		canon_BJC_i865_modeuses_PPplus, 0 },
-  { "InkJetHagaki", 	canon_BJC_i865_modeuses_inkjetHagaki, 0 },/*untested*/
-  { "Hagaki", 	        canon_BJC_i865_modeuses_Hagaki, 0 },/*untested*/
-  { "DiscCompat",	canon_BJC_i865_modeuses_disc, 0 },
-  { "DiscOthers",	canon_BJC_i865_modeuses_disc, 0 },
-  { "TShirt",		canon_BJC_i865_modeuses_TShirt, 0 },
-  { "Transparency",	canon_BJC_i865_modeuses_Transparency, 0 },
-  { "Envelope",		canon_BJC_i865_modeuses_Hagaki, 0 },
-  { "PhotopaperOther",	canon_BJC_i865_modeuses_PPother, 0 },/*untested*/
-};
-
-DECLARE_MODEUSES(canon_BJC_i865);
-
 /* ----------------------------------- Canon i900  ----------------------------------- */
 static const char* canon_BJC_i900_modeuses_plain[] = {
   "600x600dpi_high",
